[package]
name = "lendaswap-contracts-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.7", features = ["full", "node-bindings", "sol-types"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
